--- a/.github/workflows/security-review.yml
+++ b/.github/workflows/security-review.yml
@@ -10,6 +10,11 @@ on:
         required: false
         type: number
         default: 7
+      enable_commands:
+        description: 'Enable /accept-risk and /false-positive slash commands'
+        required: false
+        type: boolean
+        default: true
       semgrep_rules:
         description: 'Semgrep rule sets (comma-separated)'
         required: false
