--- a/action.yml
+++ b/action.yml
@@ -18,7 +18,7 @@ inputs:
   upload_to_s3:
     description: 'Upload review results to S3'
     required: false
-    default: 'true'
+    default: 'false'
 
 runs:
   using: 'composite'
