--- a/.github/workflows/pr-commands.yml
+++ b/.github/workflows/pr-commands.yml
@@ -25,7 +25,8 @@ jobs:
     if: >
       github.event.issue.pull_request &&
       (contains(github.event.comment.body, '/accept-risk') ||
-      contains(github.event.comment.body, '/false-positive'))
+      contains(github.event.comment.body, '/false-positive')) &&
+      contains(fromJSON('["OWNER","MEMBER","COLLABORATOR"]'), github.event.comment.author_association)
     runs-on: ubuntu-latest
 
     steps:
